# habit-tracker

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  paginations.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_habit_last_performed.py  0004_alter_habit_options_alter_habit_periodicity.py
users/: models.py  permissions.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
