[tool.poetry]
name = "habit-tracker"
version = "0.1.0"
description = ""
authors = ["me"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
celery = "^5.4.0"
redis = "^5.2.0"
django-celery-beat = "^2.7.0"
pytz = "^2024.2"
requests = "^2.32.3"
eventlet = "^0.38.0"
telebot = "^0.0.5"
drf-yasg = "^1.21.8"
django-cors-headers = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
